# stignore-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: audit.yaml  cd.yaml  ci.yaml  release.yml
scripts/: create_fake_data.sh  run_agents.sh
src/: config.rs  filesystem.rs  main.rs  models.rs  responses.rs  tasks.rs
