[package]
name = "stignore-agent"
version = "0.1.1"
edition = "2021"
authors = ["Michael Robbins"]

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
toml = "0.8.14"
sha2 = "0.10.8"