[package]
name = "stignore-agent"
version = "0.1.1"
edition = "2021"
authors = ["Michael Robbins"]

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
toml = "0.8.19"
sha2 = "0.10.8"