[package]
name = "stignore-agent"
version = "1.0.7"
edition = "2024"
authors = ["Michael Robbins"]

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
toml = "0.9.5"

[dev-dependencies]
axum-test = "17.3.0"
tempfile = "3.15.0"
